force-app/main/default/objects/Project_Interaction__c/Project_Interaction__c.object-meta.xml
<CustomObject>
    <label>Project Interaction</label>
    <nameField>
        <label>Project Interation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>