force-app/main/default/objects/Project_Interaction__c/fields/Contributor__c.field-meta.xml
<CustomField>
    <fullName>Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contributor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>