force-app/main/default/objects/Project_Interaction__c/fields/Item_Interacted_With_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Interacted_With_API_Name__c</fullName>
    <description>This field captures the name of the object that this interaction is related to.</description>
    <label>Item Interacted With API Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>