force-app/main/default/objects/Project_Interaction__c/fields/Item_Interacted_With_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Interacted_With_Name__c</fullName>
    <label>Item Interacted With Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>