force-app/main/default/objects/Project_Interaction__c/fields/Item_Interacted_With_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Item_Interacted_With_Record_Id__c</fullName>
    <label>Item Interacted With Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>