force-app/main/default/objects/Project_Interaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added Evidence</fullName>
            </value>
            <value>
                <fullName>Approved Evidence</fullName>
            </value>
            <value>
                <fullName>Generated Report</fullName>
            </value>
            <value>
                <fullName>Assigned Requirement</fullName>
            </value>
            <value>
                <fullName>Evidence Contribution</fullName>
                <isActive>false</isActive>
                <label>Evidence Contribution</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>